@@ -1,8 +1,8 @@
 [buildout]
 extends =
-    test-plone-4.3.x.cfg
+    test-plone-5.1.x.cfg
     https://raw.github.com/4teamwork/ftw-buildouts/master/plone-development.cfg
 
 [instance]
-eggs += 
+eggs +=
     ftw.theming
