@@ -14,11 +14,30 @@
     <i18n:registerTranslations directory="locales" />
 
     <genericsetup:registerProfile
+        zcml:condition="not-have plone-5"
         name="default"
         title="ftw.htmlblock"
         directory="profiles/default"
-        description="HTML block (add-on for ftw.simplelayout)"
+        description="Register ftw.htmlblock generally"
         provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <genericsetup:registerProfile
+        zcml:condition="have plone-5"
+        name="default"
+        title="ftw.htmlblock"
+        directory="profiles/default_plone5"
+        description="Register ftw.htmlblock generally"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <genericsetup:registerProfile
+        zcml:condition="have plone-5"
+        name="uninstall"
+        title="Uninstall ftw.htmlblock"
+        directory="profiles/uninstall_plone5"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
         />
 
     <include package="ftw.upgrade" file="meta.zcml" />
