@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<metadata>
+    <dependencies>
+      <dependency>profile-ftw.iframefix:default</dependency>
+    </dependencies>
+</metadata>
