@@ -1,0 +1,66 @@
+<?xml version="1.0"?>
+<object name="ftw.htmlblock.HtmlBlock"
+        meta_type="Dexterity FTI"
+        xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+        i18n:domain="ftw.htmlblock">
+
+    <!-- Basic metadata -->
+    <property name="title" i18n:translate="">HTML block</property>
+    <property name="description" i18n:translate="">The HTML block renders HTML without escaping it.</property>
+    <property name="icon_expr" />
+    <property name="allow_discussion">False</property>
+    <property name="global_allow">False</property>
+    <property name="filter_content_types">True</property>
+    <property name="allowed_content_types" />
+
+    <!-- schema interface -->
+    <property name="schema">ftw.htmlblock.contents.htmlblock.IHtmlBlockSchema</property>
+
+    <!-- class used for content items -->
+    <property name="klass">ftw.htmlblock.contents.htmlblock.HtmlBlock</property>
+
+    <!-- add permission -->
+    <property name="add_permission">ftw.htmlblock.AddHtmlBlock</property>
+
+    <!-- enabled behaviors -->
+    <property name="behaviors">
+        <element value="plone.app.content.interfaces.INameFromTitle" />
+        <element value="ftw.simplelayout.interfaces.ISimplelayoutBlock" />
+        <element value="plone.app.referenceablebehavior.referenceable.IReferenceable"/>
+    </property>
+
+    <!-- View information -->
+    <property name="default_view">@@redirect_to_parent</property>
+    <property name="default_view_fallback">False</property>
+    <property name="view_methods">
+        <element value="@@redirect_to_parent"/>
+    </property>
+
+    <!-- Method aliases -->
+    <alias from="(Default)" to="(dynamic view)"/>
+    <alias from="edit" to="@@edit"/>
+    <alias from="sharing" to="@@sharing"/>
+    <alias from="view" to="(selected layout)"/>
+
+    <!-- Actions -->
+    <action
+        action_id="view"
+        title="View"
+        category="object"
+        condition_expr=""
+        url_expr="string:${object_url}"
+        visible="True">
+        <permission value="View"/>
+    </action>
+
+    <action
+        action_id="edit"
+        title="Edit"
+        category="object"
+        condition_expr=""
+        url_expr="string:${object_url}/edit"
+        visible="True">
+        <permission value="Modify portal content"/>
+    </action>
+
+</object>
