@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="ftw.simplelayout.ContentPage">
+
+    <property name="allowed_content_types" purge="False">
+        <element value="ftw.htmlblock.HtmlBlock" />
+    </property>
+
+</object>
