@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<registry>
+
+    <records prefix="plone.resources/htmlblock"
+             interface='Products.CMFPlone.interfaces.IResourceRegistry'
+             remove="True"/>
+
+    <records prefix="plone.bundles/ftw-htmlblock-resources"
+             interface='Products.CMFPlone.interfaces.IResourceRegistry'
+             remove="True"/>
+
+</registry>
